@@ -1,30 +1,16 @@
-(* $Id: gluTess.mli,v 1.6 2003-10-30 08:53:55 garrigue Exp $ *)
+(* $Id: gluTess.mli,v 1.7 2004-07-13 07:55:18 garrigue Exp $ *)
+(* Code contributed by Jon Harrop *)
 
-type t
+type winding_rule = [`odd|`nonzero|`positive|`negative|`abs_geq_two]
 
-val create : unit -> t
+type vertices = (float * float * float) list
 
-val begins : t -> unit
-val ends : t -> unit
+val tesselate :
+  ?winding:winding_rule -> ?boundary_only:bool -> ?tolerance:float  ->
+  vertices list -> unit
 
-val vertex : t -> [`double] Raw.t -> unit
-
-val next_contour : t -> kind:[`ccw|`cw|`exterior|`interior|`unknown] -> unit
-
-(* The following functions are only available in GLU version 1.2 *)
-
-val begin_contour : t -> unit
-val end_contour : t -> unit
-
-val begin_polygon :  t -> unit
-val end_polygon : t -> unit
-
-val normal : t -> Gl.vect3 -> unit
-
-type property = [
-  | `winding_rule of [`odd|`nonzero|`positive|`negative|`abs_geq_two]
-  | `boundary_only of bool
-  | `tolerance of float
-]
-val property : t -> property -> unit
-
+type triangles =
+  { singles: vertices list; strips: vertices list; fans: vertices list }
+    
+val tesselate_and_return :
+  ?winding:winding_rule -> ?tolerance:float -> vertices list -> triangles
