@@ -1,3 +1,8 @@
+LablGL 1.01:
+------------
+2004-07-13: [Jacques]
+* merge Jon Harrop's tesselator support
+
 LablGL 1.00:
 ------------
 2003-10-01: [Jacques]
